# ComfyUI-DiffusionGemma

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  VISION.md  __init__.py  loose-ends.md  plan.md  pyproject.toml  requirements.txt  sitecustomize.py  test-coverage-plan.md
.github/workflows/: publish_action.yml
consumers/: __init__.py  analysis.py  run_log.py  tally_audit.py
decisions/: README.md  adr-cdg-001-native-socket-types.md  adr-cdg-002-transformers-streamer-access-path.md  adr-cdg-003-node-engine-seam.md  adr-cdg-004-diffusers-pipeline-drive-seam.md  adr-cdg-005-canvas-state-resumable-savestate.md  adr-cdg-006-advanced-sampler-step-window-resume.md  adr-cdg-007-clear-alpha-gguf-backend-node-set.md  adr-cdg-008-mcp-center-multi-surface-topology.md  adr-cdg-009-two-canvas-trace-display.md  adr-cdg-010-constraint-composite-and-pinned-mask.md  adr-cdg-011-control-signal-cv-lfo-mod-matrix.md  adr-cdg-012-mitm-seam-ar-diffusion-kv-cache.md  adr-cdg-013-e2e-live-battery-blackbox-driver.md  adr-cdg-014-frame-capture-discipline.md  adr-cdg-015-latent-field-input-embedding-seam.md  adr-cdg-016-crystalline-ca-rule-table-payloads.md  adr-cdg-017-neighborhood-remelt-kernel.md  adr-cdg-018-decompose-loop-py.md  adr-cdg-018-mcp-as-contract-topology-remediation.md
dgemma/: __init__.py  composite.py  constraints_hook.py  hooks.py  ingress.py  kv_cache.py  loop.py  model.py  participants.py  payloads.py  sampling.py  types.py
docs/experiments/: README.md
docs/experiments/2026-07-14-dg-gatsby-counts-ar-prior-latch/: README.md
docs/experiments/2026-07-15-dg-numeral-counts-update-in-response/: README.md
docs/experiments/2026-07-16-dg-ar-kv-field-authorship/: README.md
docs/experiments/liquid-phase-decoding/: concept.md  experiment.md
docs/handoffs/: 2026-07-23-int4-autoround-exploration.md  2026-07-23-int4-autoround-loaded.md  2026-07-23-seo-documentation-sprint.md
examples/: README.md  flipbook-annotated.ui.json  kv-cache-tier1.api.json  p2-knobs-smoke.api.json  p3-flipbook-annotated.ui.json  p3-trace-smoke-thinking.api.json  p3-trace-smoke.api.json  ping-smoke.ui.json
examples/smoke-tests/: p3-trace-annotated.ui.json  ping-smoke.api.json
handoffs/: 2026-07-05-docs-cleanup-close.md  2026-07-05-flipbook-and-sampler-theory.md  2026-07-05-gui-bracket-close.md  2026-07-05-p3-publish-armed.md  2026-07-05-phase1-close.md  2026-07-05-quant-recon-and-adr-006.md  2026-07-06-0.1.0-assembled-publish-and-live-gated.md  2026-07-06-backend-reversed-loader-retrofit.md  2026-07-06-build-verified-windows-3090-armed.md  2026-07-07-0.2.0-published.md  2026-07-07-0.2.0-staged-for-independent-review.md  2026-07-07-flipbook-images-output-and-perstep-scoping.md
nodes/: __init__.py  flipbook.py  frames_image.py  loader.py  sampler.py  trace.py
surfaces/: __init__.py
surfaces/comfyui/: __init__.py  denoise.py  encode.py  frames_image.py  loader.py  run_log_writer.py  sampler.py  socket_types.py  tally_audit.py  token_trace.py  trace.py
surfaces/comfyui/web/: live_view.js
surfaces/mcp/: __init__.py  _mcp_sdk_guard.py  server.py  state_manager.py
surfaces/mcp/commands/: __init__.py  generate.py  model.py
tests/: README.md  conftest.py  test_analysis.py  test_autoround_load.py  test_beta_rebuild.py  test_capture_full_distribution_e2e.py  test_capture_top_k_e2e.py  test_chat_template_thinking.py  test_comfyui_loader_context.py  test_conftest_fake_pipeline.py  test_constraints.py  test_constraints_hook.py  test_control_signals.py  test_diffusers_version_guard.py  test_dual_context_import.py  test_flipbook.py  test_frame_capture_discipline.py  test_frames.py  test_frames_image.py  test_hook_lifecycle.py  test_ingress.py  test_integration.py  test_kv_cache_cold_wiring.py  test_kv_cache_coverage_floor.py  test_kv_cache_ingress.py  test_kv_cache_nodes.py  test_kv_cache_run_diffusion.py  test_kv_cache_types.py  test_kv_cache_workflows.py  test_live_seams.py  test_loader_contract.py  test_loader_folder_paths.py  test_mcp_dual_context_import.py  test_mcp_generate_command.py  test_mcp_import_guard.py  test_mcp_model_command.py  test_mcp_sdk_guard.py  test_mcp_server_dispatch.py  test_mcp_statelessness.py  test_mcp_surface_seam.py  (+22 more)
tests/e2e/: conftest.py  driver.py  test_battery.py  test_driver_unit.py  test_e2e_import_guard.py  test_pack_identity_unit.py
tests/fixtures/: README.md  count_numerals_2026-07-15T23-57-39_0000.txt  count_numerals_2026-07-15T23-59-14_0000.txt  count_numerals_2026-07-16T00-36-18_0000.txt  count_numerals_2026-07-16T00-36-18_0009.txt
tools/flipbook/: README.md  flipbook.py
web/: live_view.js
