[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-diffusiongemma"
version = "0.2.0"
description = "ComfyUI node pack for DiffusionGemma — uniform-state discrete diffusion text generation, made instrumentable."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Shane V Cantwell" }]
keywords = ["comfyui", "diffusiongemma", "discrete-diffusion", "text-diffusion"]

# Access path per ADR-CDG-004 (load via transformers, drive via the Diffusers
# pipeline + scheduler). Pinned now that Phase 1 fixes a working version.
# torchvision: required by the model's processor (`Gemma4Processor` →
# `image_processing_gemma4.py:17` imports it unconditionally, transformers
# 5.13.0) — a load-path dependency even for text-only use.
dependencies = [
    "transformers==5.13.0",
    "diffusers>=0.39.0",
    "torch",
    "torchvision",
    "accelerate",
    # Pillow: was already present transitively (torchvision), but issue #21's
    # `surfaces/comfyui/frames_image.py` (DGemmaSampler's `frames_image`
    # output) imports it directly (PIL text rasterization) — declared
    # explicitly now that it's a direct dependency, not just a transitive one.
    "Pillow",
    # numpy: same story — already present transitively (torch), now a direct
    # import (`surfaces/comfyui/frames_image.py`'s PIL-image -> tensor
    # conversion).
    "numpy",
]

[project.urls]
Repository = "https://github.com/shanevcantwell/ComfyUI-DiffusionGemma"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# ADR-CDG-008 Phase 2: surfaces/mcp/ is a PEER surface, not core — the `mcp`
# SDK is therefore optional, exactly like ComfyUI itself is absent-by-design
# from this pack's core dependencies (`tests/test_seam.py`). A ComfyUI-only
# install (the `dependencies` list above) never needs this extra; only
# `surfaces/mcp/server.py` (and `python -m surfaces.mcp.server` / the
# `comfyui-diffusiongemma-mcp` script below) requires it.
mcp = ["mcp>=1.0.0"]

# ComfyUI Registry metadata (comfy-cli / registry.comfy.org).
# PublisherId minted 2026-07-05 (operator, registry.comfy.org — immutable).
# Publishing: .github/workflows/publish_action.yml auto-publishes on version
# bump to main (secret REGISTRY_ACCESS_TOKEN, set operator-side).
[tool.comfy]
PublisherId = "reflectiveattention"
DisplayName = "ComfyUI-DiffusionGemma"
Icon = ""

[tool.setuptools]
# No importable package to install yet — ComfyUI loads this pack by directory,
# not by pip install. Kept minimal until the node modules exist.
py-modules = []

[tool.pytest.ini_options]
# `--import-mode=importlib`: the repo root's own `__init__.py` (the ComfyUI
# pack entry point) makes pytest's default "prepend" mode try to resolve a
# dotted package name by walking up through it, which fails — that
# `__init__.py` only has a valid package context when ComfyUI's own loader
# constructs one (see `surfaces/comfyui/__init__.py`'s naming note, was
# `nodes/__init__.py` before ADR-CDG-008 Phase 1). `importlib` mode imports
# each test file by its own file path instead, sidestepping that entirely;
# `dgemma`/`surfaces` are still found via `sys.path[0]` (the cwd
# `python -m pytest` inserts).
testpaths = ["tests"]
# `-m 'not live'`: the default fast suite excludes `live` tests (real
# weights + CUDA) so bare `pytest` stays CI-safe/no-GPU; `pytest -m live`
# selects only them. See `tests/README.md` for the two-halves convention.
addopts = "--import-mode=importlib -m 'not live'"
markers = [
    "live: requires real DiffusionGemma weights (bf16, ~52GB cached) + a CUDA device; excluded from the default fast suite — run with `pytest -m live`",
]
